1.对战需求修改